# base

./: CMakeLists.txt  readme.md
data/: conf.xml
examples/: example1.cc
src/: CMakeLists.txt  benchmark.cc  benchmark.hh  configuration.cc  configuration.hh  error-code.hh  error.cc  error.hh  exception.cc  exception.hh  logger.cc  logger.hh  parameter.cc  parameter.hh  singleton.hh  terminal-colors.hh  timer.hh  types.hh  variant.cc  variant.hh
src/tinyxml/: CMakeLists.txt
